# telegrambot-aestheticlab

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: _checks.yml  ci.yml  codeql.yml  deploy-admin.yml  deploy.yml
scripts/: admin-register.sh  audit-dependencies.sh  configure-alerts.sh  configure-firestore-ttl.sh  configure-renewal-scheduler.sh  validate-devops-env.sh  validate-gcp-deploy-inputs.sh  verify-cloud-run-deploy.sh
src/: admin_main.py  app.py  config.py  dependencies.py  errors.py  main.py  models.py
src/gateways/: calendar_api.py  firestore_state_store.py  secret_store.py  telegram_api.py
src/routes/: admin.py  webhook.py
src/services/: formatting.py  registration.py  webhook_service.py
src/utils/: ids.py
tests/: test_calendar_gateway.py  test_config.py  test_devops_contracts.py  test_firestore_state_store.py  test_formatting.py  test_mapping.py  test_registration_service.py  test_routes_and_app.py  test_secret_store.py  test_telegram_gateway.py  test_webhook_service.py
