[project]
name = "calendar-telegram"
version = "0.1.0"
description = "Google Calendar → Telegram notifier"
authors = [{ name = "Aesthetic Lab" }]
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "google-api-python-client",
    "google-auth",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
ignore_missing_imports = true
